[package]
name = "mintpool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-hex = "1.11.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
test-log = { version = "0.2.15", features = ["trace"] }
libp2p = { version = "0.53.2", features = [
    "tokio",
    "tcp",
    "macros",
    "noise",
    "yamux",
    "kad",
    "gossipsub",
    "identify",
    "dns",
] }
tokio = { version = "1.36.0", features = ["full"] }
eyre = "0.6.12"
regex = "1.10.4"
async-trait = "0.1.77"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
clap = { version = "4.5.2", features = ["derive"] }
envconfig = "0.10.0"
colored = "2.1.0"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "macros",
    "sqlite",
    "postgres",
    "any",
] }
once_cell = "1.19.0"
rand = "0.8.5"
runit = "0.1.0"
futures-util = "0.3"
mini-moka = "0.10.3"
axum = "0.7.5"
reqwest = "0.12.3"
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "17633df", features = [
    "sol-types",
    "network",
    "rpc-types-eth",
    "pubsub",
] }

alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "17633df" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "17633df", features = [
    "pubsub",
    "ws",
    "reqwest"
] }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "17633df", features = [
    "pubsub",
    "ws"
] }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "17633df", features = [
    "eip712",
] }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "17633df" }
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", rev = "17633df" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "17633df" }
alloy-core = { git = "https://github.com/alloy-rs/core", rev = "7574bfc" }
alloy-sol-types = { git = "https://github.com/alloy-rs/core", rev = "7574bfc", features = ["eip712-serde"] }
alloy-primitives = { git = "https://github.com/alloy-rs/core", rev = "7574bfc", features = ["serde"] }
alloy-sol-macro = { git = "https://github.com/alloy-rs/core", rev = "7574bfc", features = ["json"] }
url = "2.5.0"
futures = "0.3.30"
sha256 = "1.5.0"


[patch.crates-io]
alloy-primitives = { git = "https://github.com/alloy-rs/core", rev = "7574bfc" }


[profile.dev.package.sqlx-macros]
opt-level = 3

[dev-dependencies]
alloy-node-bindings = { git = "https://github.com/alloy-rs/alloy", rev = "17633df" }
