[package]
name = "mintpool"
version = "0.1.0"
edition = "2021"

[lib]
name = "mintpool"
path = "src/lib.rs"

[[bin]]
name = "mintpool"
path = "src/main.rs"


[dependencies]
const-hex = "1.11.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
test-log = { version = "0.2.15", features = ["trace"] }
libp2p = { version = "0.53.2", features = [
    "tokio",
    "tcp",
    "macros",
    "noise",
    "yamux",
    "kad",
    "gossipsub",
    "identify",
    "ping",
    "dns",
    "request-response",
    "cbor",
    "quic",
    "relay",
    "autonat",
    "dcutr"
] }
tokio = { version = "1.36.0", features = ["full"] }
eyre = "0.6.12"
regex = "1.10.4"
async-trait = "0.1.77"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
clap = { version = "4.5.2", features = ["derive"] }
envconfig = "0.10.0"
colored = "2.1.0"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "macros",
    "sqlite",
    "postgres",
    "any",
    "chrono",
] }
once_cell = "1.19.0"
rand = "0.8.5"
runit = "0.1.0"
futures-util = "0.3"
futures-ticker = "0.0.3"
mini-moka = "0.10.3"
axum = "0.7.5"
reqwest = "0.12.3"
url = "2.5.0"
futures = "0.3.30"
sha256 = "1.5.0"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "compression-full", "trace"] }
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "bbef8de", features = [
    "sol-types",
    "network",
    "rpc-types-eth",
    "pubsub",
    "json",
    "rpc-client",
    "provider-http",
    "provider-ws",
    "json-rpc",
    "rpc-client-ws",
    "rpc-types-json",
    "signers",
    "transport-ws",
    "eip712",
    "serde",
    "json",
    "json-abi",
    "node-bindings",
    "contract",
    "signer-wallet"
] }

chrono = { version = "0.4.38", features = ["serde"] }
tracing-opentelemetry = "0.23.0"
opentelemetry = { version = "0.22.0", features = ["metrics"] }
opentelemetry_api = { version = "0.20.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.22.1", features = ["metrics", "rt-tokio"] }
opentelemetry-stdout = { version = "0.3.0", features = ["logs", "metrics", "trace"] }
opentelemetry-prometheus = "0.15.0"
prometheus = "0.13.3"
built = "0.7.2"
itertools = "0.12.1"


[profile.dev.package.sqlx-macros]
opt-level = 3


[build-dependencies]
built = { version = "0.7.2", features = ["git2"] }
