[package]
name = "mintpool-controller"
version.workspace = true
edition.workspace = true

[dependencies]
mintpool-primitives.workspace = true

async-trait = "0.1.77"
envconfig = "0.10.0"
eyre = "0.6.12"
libp2p = { version = "0.53.2", features = [
    "tokio",
    "tcp",
    "macros",
    "noise",
    "yamux",
    "kad",
    "gossipsub",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
