[package]
name = "mintpool-primitives"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives = { version = "0.6.4", features = ["serde"] }
eyre = "0.6.12"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
libp2p = { version = "0.53.2", features = [
    "tokio",
    "tcp",
    "macros",
    "noise",
    "yamux",
    "kad",
    "gossipsub",
] }
